--- a/style.css
+++ b/style.css
@@ -6,18 +6,27 @@ header {
     padding: 4px;
     
 }
-
-header {
-    display: block;
+ul,a{
+    display: flex;
 }
-nav {
-    display: block;
+.aicha{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    align-content: center;
     color: white;
-    
+    padding:20px 0px 20px 20px ;
 }
 nav p{
     color: #063a5c;
-    text-align: right;
+    display: flex;
+    justify-content: space-between;
+   
+}
+.photo{
+    color: #063a5c;
+    margin-right: 20px;
    
 }
 a{
@@ -41,9 +50,14 @@ nav ul {
     padding-right: 10px;
     padding-top: 10px;
     padding-bottom: 10px;
-    margin-top: -30px;
     margin-bottom: 0px;
     color: white;
+}
+.life{
+    text-align: center;
+    margin: auto;
+    width: 100%;
+    height: 500px;
 }
 ul {
     display: block;
@@ -55,6 +69,7 @@ ul {
     padding-inline-start: 40px;
     color: white;
 }
+
 img {
     overflow-clip-margin: content-box;
     overflow: clip;
